--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ default:
     - apt -y install apt-utils
     - apt -y install net-tools python3.8 python3-pip
     - apt -y upgrade
+    - pip install django
     - cd fact-checking-tool
 
 
