--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,3 +20,6 @@ build:
     - python3 manage.py migrate
     - python3 manage.py check
     - python3 manage.py test
+
+  after_script:
+    - git tag -a $CI_PIPELINE_IID $CI_COMMIT_SHA
