--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ default:
   before_script:
     - apt -y update
     - apt -y install apt-utils
-    - apt -y install net-tools python3.8 python3-pip
+    - apt -y install net-tools python3.8 python3-pip git
     - apt -y upgrade
     - pip install django
     - cd fact-checking-tool
