--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,8 @@ default:
     - apt -y install apt-utils
     - apt -y install net-tools python3.8 python3-pip git
     - apt -y upgrade
+    - git config user.email "gitlab@lrz.de"
+    - git config user.name "Gitlab Runner"
     - pip install django
     - cd fact-checking-tool
 
