--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,16 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Visual Studio Code # 
+.vscode/* 
+!.vscode/settings.json 
+!.vscode/tasks.json 
+!.vscode/launch.json 
+!.vscode/extensions.json 
+.history
+
+### macOS ###
+*.DS_Store
+.AppleDouble
+.LSOverride
