--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,15 @@ description = ""
 authors = ["gvu <gvu@inovex.de>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.8.10"
 Django = "^4.1.3"
+django-elasticsearch-dsl = "^7.2.2"
+djangorestframework = "^3.14.0"
+django-factory-boy = "^1.0.0"
+factory-boy = "^3.2.1"
+elasticsearch-dsl = "^7.4.0"
+django-elasticsearch-dsl-drf = "^0.22.5"
+tzdata = "^2022.6"
 
 [tool.poetry.dev-dependencies]
 prospector = {extras = ["with_pyroma", "with_bandit", "with_mypy"], version = "^1.7.7"}
