14: use DPR on post verify dpr

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,9 @@ factory-boy = "^3.2.1"
 elasticsearch-dsl = "^7.4.0"
 django-elasticsearch-dsl-drf = "^0.22.5"
 tzdata = "^2022.6"
-google-api-python-client = "^2.66.0"
-pymediawiki = "^0.7.2"
-validators = "0.18.2"
-farm-haystack = {extras = ["crawler", "graphdb", "inmemorygraph", "only-milvus", "only-pinecone", "opensearch", "preprocessing", "sql", "weaviate"], version = "^1.11.0"}
+fastapi = "^0.88.0"
+datetime = "^4.8"
+django-cors-headers = "^3.13.0"
 
 [tool.poetry.dev-dependencies]
 prospector = {extras = ["with_pyroma", "with_bandit", "with_mypy"], version = "^1.7.7"}
