--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["gvu <gvu@inovex.de>"]
 
 [tool.poetry.dependencies]
-python = "^3.8.10"
+python = "^3.8"
 Django = "^4.1.3"
 django-elasticsearch-dsl = "^7.2.2"
 djangorestframework = "^3.14.0"
@@ -17,10 +17,15 @@ tzdata = "^2022.6"
 fastapi = "^0.88.0"
 datetime = "^4.8"
 django-cors-headers = "^3.13.0"
-haystack = "^0.42"
 llvmlite = "^0.39.1"
 numba = "^0.56.4"
-farm-haystack = "^1.12.2"
+haystack = "^0.42"
+google-api-python-client = "2.66.0"
+pymediawiki = "0.7.2"
+validators = "0.18.2"
+farm-haystack = {extras = ["crawler", "graphdb", "inmemorygraph", "only-faiss", "only-milvus", "opensearch", "preprocessing", "sql", "weaviate"], version = "^1.11.1"}
+transformers = "^4.25.1"
+torch = "^1.13.1"
 
 [tool.poetry.dev-dependencies]
 prospector = {extras = ["with_pyroma", "with_bandit", "with_mypy"], version = "^1.7.7"}
