28 integrate bert model with elastic search

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,18 +14,19 @@ factory-boy = "^3.2.1"
 elasticsearch-dsl = "^7.4.0"
 django-elasticsearch-dsl-drf = "^0.22.5"
 tzdata = "^2022.6"
-fastapi = "^0.88.0"
 datetime = "^4.8"
 django-cors-headers = "^3.13.0"
 llvmlite = "^0.39.1"
 numba = "^0.56.4"
 haystack = "^0.42"
-google-api-python-client = "2.66.0"
 pymediawiki = "0.7.2"
 validators = "0.18.2"
 farm-haystack = {extras = ["crawler", "graphdb", "inmemorygraph", "only-faiss", "only-milvus", "opensearch", "preprocessing", "sql", "weaviate"], version = "^1.11.1"}
 transformers = "^4.25.1"
 torch = "^1.13.1"
+fastapi = "^0.89.1"
+google-api-python-client = "^2.74.0"
+lxml = "^4.9.2"
 
 [tool.poetry.dev-dependencies]
 prospector = {extras = ["with_pyroma", "with_bandit", "with_mypy"], version = "^1.7.7"}
